Version History :
-----------------
v10.2.5
- projectManager: added calls to Sequence.saveSettings in necessary places

v10.2.3
- projectManager: in the last update the projectManager is updated to list
  valid projects only, but this made the newly created empty projects
  unreachable in sequence creation tab, it is now fixed by getting the projects
  instead of validProjects

v10.2.2
- the dependency to outer sources are eliminated by adding the
  defaultProjectSettings.xml, users.xml, and _defaultFiles_ folder to the
  package folder
- repositoryModel: Repository class is updated to reflect the changes in the
  settings file paths
- cahce: CachedMethod now supports chaching of property methods
- repositoryModel: all suitable get methods converted to properties, and some
  of them are now cached

v10.2.1
- projectModel: Sequence class now sorts the shots list properly whenever it
  reads or saves the settings

v10.1.31
- projectManager: the projectManager was not able to add alternative shots
- projectModel: defaults introduced to shot models init
- projectModel: fixed alternative shot creation

v10.1.30
- shotEditor: fixed shotEditor not displaying under houdini
- projectModel: sequence class now keeps only the most recent 5 backups of the
  settings

v10.1.28
- all the get methods (or most of them) turned to properties in most of the
  modules

v10.1.26
- assetManager: the frame range warning was a little bit cumbersome, it is
  fixed now
- assetManager: the interface was complaning about a wrong argument type while
  filling the assets_tableWidget, it is now fixed

v10.1.25
- assetManager: fixed a bug which causes the subName_listWidget and
  subName_lineEdit displaying different texts, where the subName_listWidget's
  text was wrong. This bug was caused by the lack of both setting the current
  item on the list and setting the item itself selected. So the item gets
  selected but the current item remains in a different item in the