@@ -2,6 +2,7 @@ Version History :
 -----------------
 v10.2.5
 - projectManager: added calls to Sequence.saveSettings in necessary places
+- projectModel: fixed creation of multiple shots with same name in sequence
 
 v10.2.3
 - projectManager: in the last update the projectManager is updated to list
